gccida/g1/cfg_layout_finalize
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cfg_layout_finalize/src/cfglayout.c:1058:4: error: expected ';' after expression
rtx v14; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cfg_layout_finalize/src/cfglayout.c:1058:5: error: use of undeclared identifier 'v14'
rtx v14; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cfg_layout_finalize/src/cfglayout.c:1072:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cfg_layout_finalize/src/cfglayout.c:1072:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cfg_layout_finalize/src/cfglayout.c:1142:1: error: use of undeclared identifier 'v14'
v14 = function_tail_eff_head; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cfg_layout_finalize/src/cfglayout.c:1145:6: error: use of undeclared identifier 'v14'
if ( v14 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cfg_layout_finalize/src/cfglayout.c:1147:14: error: use of undeclared identifier 'v14'; did you mean 'v15'?
*( _QWORD *)&v14[1] = rtx; 
             ^~~
             v15
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cfg_layout_finalize/src/cfglayout.c:1059:18: note: 'v15' declared here
 struct rtx_def *v15; // rdi 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cfg_layout_finalize/src/cfglayout.c:1195:1: error: must use 'enum' tag to refer to type 'reg_note'
reg_note = find_reg_note( end, REG_BR_PROB, 0LL); 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cfg_layout_finalize/src/cfglayout.c:1195:10: error: expected identifier or '('
reg_note = find_reg_note( end, REG_BR_PROB, 0LL); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cfg_layout_finalize/src/cfglayout.c:1196:6: error: use of undeclared identifier 'reg_note'; did you mean 'reg_names'?
if ( reg_note ) 
     ^~~~~~~~
     reg_names
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cfg_layout_finalize/src/hard-reg-set.h:485:21: note: 'reg_names' declared here
extern const char * reg_names[FIRST_PSEUDO_REGISTER];
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cfg_layout_finalize/src/cfglayout.c:1198:21: error: use of undeclared identifier 'reg_note'
if ( *( __int64 *)( reg_note->fld[0].rtwint + 8) <= 4999 ) 
                    ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cfg_layout_finalize/src/obj/cfglayout.o] Error 1
